lib_LTLIBRARIES = \
 libhlapi.la

SHAPE_FILES= \
	aggregate.h \
	aggregate.cpp \
	box.h \
	box.cpp \
	circle.h \
	circle.cpp \
	cone.h \
	cone.cpp \
	csg.h \
	csg.cpp \
	cylinder.h \
	cylinder.cpp \
	mesh_object.h \
	mesh_object.cpp \
	phong_triangle.h \
	phong_triangle.cpp \
	plane.h \
	plane.cpp \
	rectangle.h \
	rectangle.cpp \
	triangle.h \
	triangle.cpp \
	sphere.h \
	sphere.cpp \
	torus.h \
	torus.cpp


EXPERIMENTAL_SHAPE_FILES = \
	quadric.h \
	quadric.cpp \
	grid.h \
	grid.cpp

EXTRA_FILES = \
	hlapi_all.h \
	plugins_all.h


libhlapi_la_SOURCES = \
	$(SHAPE_FILES) \
	$(EXPERIMENTAL_SHAPE_FILES) \
	$(EXTRA_FILES) \
	\
	class_manager.h \
	class_manager.cpp \
	image_manager.h \
	image_manager.cpp \
	\
	plugin_manager.h \
	plugin_manager.cpp \
	scene_manager.h \
	scene_manager.cpp
