lib_LTLIBRARIES = \
	libllapi.la

pkginclude_HEADERS = \
	coord2.hpp \
	coord3.hpp \
	vector2.hpp \
	vector3.hpp \
	point2.hpp \
	point3.hpp \
	\
	simple_pattern.hpp \
	\
	attribute_all.h \
	checkerboard.h \
	color.h \
	extended_attribute.h \
	extended_type_functions.h \
	extended_user_functions.h \
	image_filter.h \
	interval.h \
	kdtree.h \
	llapi_all.h \
	llapi_defs.h \
	machine.h \
	mat_utils.h \
	math_tools.h \
	matrix.h \
	object_filter.h \
	object_required.h \
	perturbation.h \
	priority_queue.h \
	quaternion.h \
	renderer.h \
	solvers.h \
	type_all.h \
	user_functions.h \
	vector2d.h \
	vector3d.h \
	vector_tools.h \
	volume.h \
	warning_eliminator.h \
	\
	exception.hpp \
	\
	entity.h \
	atmosphere.h \
	atmospheric_object.h \
	attribute.h \
	base_class.h \
	bounding_box.h \
	bsdf.h \
	camera.h \
	catrom2.h \
	debug.h \
	file.h \
	gradient.h \
	heap_manager.h \
	image.h \
	image_io.h \
	scene_io.h \
	light.h \
	material.h \
	mesh.h \
	object.h \
	perlin_noise.h \
	pattern.h \
	procedural.h \
	program.h \
	ray.h \
	root_solver.h \
	sc_noise.h \
	scene.h \
	span_list.h \
	surface_data.h \
	wood.h \
	worley_basis.h \
	type_functions.h \
	outputmanager.h


libllapi_la_SOURCES = \
	exception.cpp \
	string_dumpable.cpp \
	cloneable.cpp \
	attribute.cpp \
	simple_pattern.cpp \
	\
	entity.cpp \
	atmosphere.cpp \
	atmospheric_object.cpp \
	base_class.cpp \
	bounding_box.cpp \
	bsdf.cpp \
	camera.cpp \
	catrom2.cpp \
	debug.cpp \
	file.cpp \
	gradient.cpp \
	heap_manager.cpp \
	image.cpp \
	image_io.cpp \
	scene_io.cpp \
	light.cpp \
	material.cpp \
	mesh.cpp \
	object.cpp \
	perlin_noise.cpp \
	pattern.cpp \
	procedural.cpp \
	program.cpp \
	ray.cpp \
	root_solver.cpp \
	sc_noise.cpp \
	scene.cpp \
	span_list.cpp \
	surface_data.cpp \
	wood.cpp \
	worley_basis.cpp \
	type_functions.cpp \
	user_functions.cpp \
	outputmanager.cpp

