if EXPERIMENTAL
experimental_dirs =                             \
        abvh                                    \
        height_field                            \
        lwo                                     \
        polyhedron                              \
        subdiv 
endif

SUBDIRS =                                       \
        aggregate_uniform_grid                  \
        bezier                                  \
        $(experimental_dirs)
