# FIXME! Install in ${SCENE_DIR}/lights

EXTRA_DIST =                                    \
        area_light1.rt                          \
        area_light2.rt                          \
        halo_lights.rt                          \
        night.rt                                \
        night2.rt                               \
        projector.rt                            \
        warn.rt

# distclean:
#               @rm -f Makefile
#               @rm -f *.tga *.png *.jpg
