#FIXME! Install in ${SCENE_DIR}/materials

EXTRA_DIST = \
	amplifier.rt \
        anisotropic.rt \
	anisotropic2.rt \
        background_mapping.rt \
        brick.rt \
        bump.rt \
	checker.rt \
	checker45.rt \
        composite.rt \
        cook.rt \
        crackle.rt \
        crystal.rt \
        cylgrad.rt \
        leopard.rt \
        marble.rt \
        marble2.rt \
        materials.rt \
        painted_crystal.rt \
        pattern_demo.rt \
        schlick.rt \
        schlick_double.rt \
        texture.rt \
        ward.rt \
        warping.rt \
        water.rt \
        wood.rt \
        worley.rt

# distclean:
# 		@rm -f Makefile
# 		@rm -f *.tga *.png *.jpg
