# FIXME! install in ${SCENE_DIR}/misc

EXTRA_DIST =                                    \
        cornell_box.rt                          \
        lamp.rt                                 \
        lamp_point.rt                           \
        lens_flare.rt                           \
        plastic_cornell_box.rt                  \
        projector_cartoon.rt                    \
        text.rt                                 \
        train.rt                                \
        xmas-tree.rt

# distclean:
#               @rm -f Makefile
#               @rm -f *.tga *.png *.jpg
