# FIXME! Install in $(SCENE_DIR)/objects
EXTRA_DIST =					\
	aggregate.rt				\
        aggregate_uniform_grid.rt		\
	box.rt					\
	circle.rt				\
        cone.rt					\
        csg.rt					\
        cylinder.rt				\
        phong_triangle.rt			\
        rectangle.rt				\
        teapot.rt				\
        torus.rt				\
        triangle.rt

# distclean:
# 	@rm -f Makefile
# 	@rm -f *.tga *.png *.jpg
